--- a/src/app/components/sudoku/sudoku.component.html
+++ b/src/app/components/sudoku/sudoku.component.html
@@ -2,64 +2,45 @@
 <div class="container">
   <div class="row">
     <div class="col-3">
-      <div class="list-group">
-        <a href="#" class="list-group-item list-group-item-action">Nueva Partida</a>
-        <a href="#" class="list-group-item list-group-item-action">Historial</a>
-        <a href="#" class="list-group-item list-group-item-action">Tutorial</a>
-        <a href="#" class="list-group-item list-group-item-action">Salir</a>
-      </div>
-
       <div class="btn-group btn-group-vertical" role="group" aria-label="Button group with nested dropdown">
         <div class="btn-group" role="group">
           <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">
-            Dropdown
+            Nueva Partida
           </button>
           <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-            <a class="dropdown-item" href="#">Facil</a>
-            <a class="dropdown-item" href="#">Mediano</a>
+            <a class="dropdown-item" routerLink="/sudokuf/F">Facil</a>
+            <a class="dropdown-item" routerLink="/sudokum/M">Medio</a>
+            <a class="dropdown-item" routerLink="/sudokuc/C">Complejo</a>
           </div>
         </div>
-        <button type="button" class="btn btn-secondary">Historial</button>
-        <button type="button" class="btn btn-secondary">Tutorial</button>
-        <button type="button" class="btn btn-secondary">Salir</button>
+        <button type="button" class="btn btn-secondary" routerLink="/historial">Historial</button>
+        <button type="button" class="btn btn-secondary" routerLink="/tutorial">Tutorial</button>
+        <button type="button" class="btn btn-secondary" routerLink="/">Salir</button>
       </div>
-
-
-      <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-          <button type="button" class="btn btn-secondary">1</button>
-          <button type="button" class="btn btn-secondary">2</button>
-        
-          <div class="btn-group" role="group">
-            <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Dropdown
-            </button>
-            <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-              <a class="dropdown-item" href="#">Dropdown link</a>
-              <a class="dropdown-item" href="#">Dropdown link</a>
-            </div>
-          </div>
-        </div>
     </div>
 
     <div class="col-6">
-      Seleccione:
+      <b>Nivel:</b>
+      {{descripcionNivel}}
+      <br/>
+      <br/> Seleccione el n&uacute;mero:
       <sudoku-toolbar #sudoToolbar></sudoku-toolbar>
       <br>
-      <table class="table table-bordered">
+      <table class="table table-bordered table-sm borde-tabla">
         <thead></thead>
         <tbody>
-
           <tr *ngFor="let juego of juegoActual.valores; let i = index">
-            <ng-container *ngFor="let columna of juego; let j = index">
+            <ng-container *ngFor="let columna of juego; let j = index;">
               <ng-container *ngIf="juegoOriginal.valores[i][j]!=0; else celdaHabilitada">
-                <td>
+                <td align="center" class="fondo-celda" [ngClass]="{'borde-lateral': j%juegoOriginal.longitud == 0 ,'borde-horizontal': i%juegoOriginal.longitud == 0 }">
                   {{columna}}
                 </td>
               </ng-container>
               <ng-template #celdaHabilitada class="text-danger">
-                <td (click)="pintarCelda(i,j)" class="font-weight-bold">
-                  {{columna == 0 ? '' : columna}}
+                <td align="center" (click)="pintarCelda(i,j)" class="font-weight-bold" [ngClass]="{'borde-lateral': j%juegoOriginal.longitud == 0,'borde-horizontal': i%juegoOriginal.longitud == 0 }">
+                  <h5>{{columna == 0 ? '' : columna}}</h5>
+                  
                 </td>
               </ng-template>
             </ng-container>
@@ -68,7 +49,7 @@
         </tbody>
       </table>
       <br>
-      <button type="button" class="btn btn-primary" (click)="terminar()">Terminar</button>
+      <button type="button" class="btn btn-dark" (click)="terminar()">Terminar</button>
     </div>
   </div>
 </div>
