Archivos faltantes login

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,7 +4,7 @@
         <label for="inputUsuario" class="sr-only">Email address</label>
         <input type="email" id="inputUsuario" name="usuario" class="form-control" placeholder="Nombre de Usuario" [(ngModel)]="usuario" required autofocus>
         <br>
-        <button class="btn btn-lg btn-primary btn-block" type="submit" [disabled]="!loginForm.form.valid">Ingresar</button>
+        <button class="btn btn-lg btn-dark btn-block" type="submit" [disabled]="!loginForm.form.valid">Ingresar</button>
         <p class="mt-5 mb-3 text-muted">&copy; Sudoku-PAMM-KESC</p>
     </form>
 </div>
