--- a/src/app/components/sudoku/sudoku.component.html
+++ b/src/app/components/sudoku/sudoku.component.html
@@ -51,5 +51,8 @@
       <br>
       <button type="button" class="btn btn-dark" (click)="terminar()">Terminar</button>
     </div>
+    <div>
+      Usuario: @{{usuarioActual.usuario}}
+    </div>
   </div>
 </div>
