--- a/src/app/components/sudoku-historial/sudoku-historial.component.html
+++ b/src/app/components/sudoku-historial/sudoku-historial.component.html
@@ -18,7 +18,7 @@
         <tbody>
           <tr *ngFor="let juego of historial">
             <td>
-              <button type="button" class="btn btn-sm btn-success" (click)="cargar()">Cargar</button>              
+              <button type="button" class="btn btn-sm btn-success" (click)="cargar(juego)">Cargar</button>              
               <button type="button" class="btn btn-sm btn-default" (click)="eliminar(juego)">Eliminar</button>
             </td>
             <td>{{juego.nombre}}</td>
