Tutorial y version 1 del juego

--- a/src/app/components/sudoku-historial/sudoku-historial.component.html
+++ b/src/app/components/sudoku-historial/sudoku-historial.component.html
@@ -21,7 +21,7 @@
               <button type="button" class="btn btn-sm btn-success" (click)="cargar(juego)">Cargar</button>              
               <button type="button" class="btn btn-sm btn-default" (click)="eliminar(juego)">Eliminar</button>
             </td>
-            <td>{{juego.nombre}}</td>
+            <td>SUDOKU</td>
             <td>{{juego.juegoOriginal.nivel}}</td>
             <td>{{juego.fecha | date:('dd/MM/yyyy')}}</td>
           </tr>
