--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -11,6 +11,6 @@
     </div>
   </div>
   <button type="button" class="btn btn-secondary" routerLink="/sudoku-historial">Historial</button>
-  <button type="button" class="btn btn-secondary" routerLink="/tutorial">Tutorial</button>
+  <button type="button" class="btn btn-secondary" routerLink="/sudoku-tutorial">Tutorial</button>
   <button type="button" class="btn btn-secondary" routerLink="/">Salir</button>
 </div>
