--- a/src/app/components/sudoku-tutorial/sudoku-tutorial.component.html
+++ b/src/app/components/sudoku-tutorial/sudoku-tutorial.component.html
@@ -1,3 +1,12 @@
-<p>
-  sudoku-tutorial works!
-</p>
+<br>
+<div class="container">
+  <div class="row">
+    <div class="col-3">
+      <menu></menu>
+    </div>
+    <div class="col-6">
+      <pdf-viewer [src]="pdfSrc" [render-text]="true" style="display: block;"></pdf-viewer>
+    </div>
+    <datos-usuario></datos-usuario>
+  </div>
+</div>
